Add link to footer

--- a/templates/error.html
+++ b/templates/error.html
@@ -14,6 +14,7 @@
 
 <div class="footer">
 <p>reMarkable cloud browser</p>
+<p><a href="https://github.com/umanovskis/remarkable-cloud-browser">Made by Daniels Umanovskis</a></p>
 </div>
 </body>
 </html>
