--- a/templates/view.html
+++ b/templates/view.html
@@ -25,6 +25,7 @@
 
 <div class="footer">
 <p>reMarkable cloud browser</p>
+<p><a href="https://github.com/umanovskis/remarkable-cloud-browser">Made by Daniels Umanovskis</a></p>
 </div>
 </body>
 </html>
